--- a/app/src/main/res/layout/history_cell_row.xml
+++ b/app/src/main/res/layout/history_cell_row.xml
@@ -66,6 +66,7 @@
                     android:layout_height="30dp"
 
                     android:background="@drawable/ic_oneway"
+                    card_view:backgroundTint="@color/purple_200"
                     card_view:layout_constraintBottom_toBottomOf="parent"
                     card_view:layout_constraintEnd_toEndOf="parent"
                     card_view:layout_constraintTop_toTopOf="parent"
@@ -117,20 +118,20 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center_vertical"
-                android:layout_marginStart="20dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginEnd="30dp"
-                android:layout_marginRight="30dp"
-                android:background="@drawable/ic_delete" />
+                android:layout_marginEnd="17dp"
+                android:layout_marginRight="17dp"
+                android:background="@drawable/ic_delete"
+                card_view:backgroundTint="@color/quantum_googred500" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/actionDetails"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center_vertical"
-                android:layout_marginEnd="10dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginEnd="22dp"
+                android:layout_marginRight="22dp"
                 android:background="@drawable/ic_details"
+                card_view:backgroundTint="@color/purple_200"
                 tools:ignore="RtlCompat" />
 
         </LinearLayout>
