Update Some Features

--- a/app/src/main/res/layout/dialog_notifier_snooze.xml
+++ b/app/src/main/res/layout/dialog_notifier_snooze.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:backgroundTint="@color/white"
@@ -63,7 +64,7 @@
             android:backgroundTint="@color/purple_200"
             android:insetTop="0dp"
             android:insetBottom="0dp"
-            android:text="@string/Snooze"
+            android:text="@android:string/cancel"
             android:textAllCaps="false"
             android:textColor="@color/purple_700"
             android:textSize="17dp"
