--- a/app/src/main/res/layout/activity_trip.xml
+++ b/app/src/main/res/layout/activity_trip.xml
@@ -54,7 +54,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="45dp"
             android:text="@string/LBL_NOTES"
             android:textColor="@color/teal_200"
             app:layout_constraintStart_toStartOf="parent"
@@ -66,7 +66,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="45dp"
             android:text="@string/LBL_TYPE"
             android:textColor="@color/teal_200"
             app:layout_constraintStart_toStartOf="parent"
@@ -186,15 +186,51 @@
             app:layout_constraintTop_toTopOf="@+id/textView4" />
 
         <LinearLayout
+            android:id="@+id/linearLayout6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="@+id/swtchRepeating"
+            app:layout_constraintEnd_toEndOf="@+id/txtBackEndPoint"
+            app:layout_constraintStart_toStartOf="@+id/txtBackEndPoint"
+            app:layout_constraintTop_toTopOf="@+id/swtchRepeating">
+
+            <EditText
+                android:id="@+id/txtRepeatingNumber"
+                android:layout_width="50dp"
+                android:layout_height="45dp"
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/custom_input"
+                android:ems="10"
+                android:gravity="center"
+                android:inputType="number"
+                android:maxLength="3"
+                android:text="3"
+                android:textColor="@color/purple_200"
+                android:visibility="invisible" />
+
+            <Spinner
+                android:id="@+id/repeatingSpinner"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="20dp"
+                android:layout_marginLeft="20dp"
+                android:gravity="center"
+                android:visibility="invisible" />
+        </LinearLayout>
+
+        <LinearLayout
             android:id="@+id/linearLayout2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="30dp"
             android:gravity="center"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtRepeatingNumber">
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout6">
 
             <Button
                 android:id="@+id/dateBtn"
@@ -211,41 +247,13 @@
                 android:background="@drawable/ic_timer" />
         </LinearLayout>
 
-        <Spinner
-            android:id="@+id/repeatingSpinner"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginLeft="20dp"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="@+id/txtRepeatingNumber"
-            app:layout_constraintEnd_toEndOf="@+id/radioGroup"
-            app:layout_constraintStart_toEndOf="@+id/txtRepeatingNumber"
-            app:layout_constraintTop_toTopOf="@+id/txtRepeatingNumber" />
-
-        <EditText
-            android:id="@+id/txtRepeatingNumber"
-            android:layout_width="50dp"
-            android:layout_height="45dp"
-            android:background="@drawable/custom_input"
-            android:ems="10"
-            android:gravity="center"
-            android:inputType="number"
-            android:maxLength="3"
-            android:text="3"
-            android:textColor="@color/purple_200"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="@+id/swtchRepeating"
-            app:layout_constraintStart_toStartOf="@+id/radioGroup"
-            app:layout_constraintTop_toTopOf="@+id/swtchRepeating" />
-
         <Switch
             android:id="@+id/swtchRepeating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="45dp"
             android:text="@string/LBL_REPEAT"
             android:textColor="@color/teal_200"
             app:layout_constraintStart_toStartOf="parent"
