Update Some Features

--- a/app/src/main/res/layout/round_trip.xml
+++ b/app/src/main/res/layout/round_trip.xml
@@ -131,6 +131,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
             android:background="@drawable/custom_input"
+            android:editable="false"
             android:ems="10"
             android:hint="@string/HINT_START_POINT"
             android:inputType="textPersonName"
@@ -150,6 +151,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
             android:background="@drawable/custom_input"
+            android:editable="false"
             android:ems="10"
             android:hint="@string/HINT_END_POINT"
             android:inputType="textPersonName"
