--- a/app/src/main/res/layout/activity_add_notes_dialog.xml
+++ b/app/src/main/res/layout/activity_add_notes_dialog.xml
@@ -14,6 +14,7 @@
         android:ems="10"
         android:hint="Add new note"
         android:inputType="textPersonName"
+        android:backgroundTint="@color/purple_200"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,6 +27,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         android:text="@string/addNote"
+        android:backgroundTint="@color/purple_200"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
