--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,6 +30,7 @@
             android:maxLength="150"
             android:paddingLeft="12dp"
             android:paddingRight="12dp"
+            android:textColorHint="@color/hintColor"
             app:layout_constraintBottom_toTopOf="@+id/passwordEditTxt"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
@@ -53,6 +54,7 @@
             android:maxLength="150"
             android:paddingLeft="12dp"
             android:paddingRight="12dp"
+            android:textColorHint="@color/hintColor"
             app:layout_constraintBottom_toTopOf="@+id/loginBtn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
