--- a/app/src/main/res/layout/activity_notes_dialog.xml
+++ b/app/src/main/res/layout/activity_notes_dialog.xml
@@ -13,6 +13,7 @@
         android:layout_width="370dp"
         android:layout_height="250dp"
         android:layout_marginTop="16dp"
+        android:backgroundTint="@color/purple_200"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,6 +26,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginBottom="16dp"
         android:text="@string/save"
+        android:backgroundTint="@color/purple_200"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
