--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -47,6 +47,7 @@
             android:maxLength="150"
             android:paddingLeft="12dp"
             android:paddingRight="12dp"
+            android:textColorHint="@color/hintColor"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/emailSignup" />
@@ -70,6 +71,7 @@
             android:maxLength="150"
             android:paddingLeft="12dp"
             android:paddingRight="12dp"
+            android:textColorHint="@color/hintColor"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/userNameTxt" />
@@ -93,6 +95,7 @@
             android:maxLength="150"
             android:paddingLeft="12dp"
             android:paddingRight="12dp"
+            android:textColorHint="@color/hintColor"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
