--- a/app/src/main/res/layout/activity_trip.xml
+++ b/app/src/main/res/layout/activity_trip.xml
@@ -87,6 +87,7 @@
             android:maxLength="150"
             android:paddingLeft="7dp"
             android:paddingRight="7dp"
+            android:textColorHint="@color/hintColor"
             app:layout_constraintBottom_toBottomOf="@+id/userEmail"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/userEmail"
@@ -106,6 +107,7 @@
             android:inputType="textPersonName"
             android:paddingLeft="7dp"
             android:paddingRight="7dp"
+            android:textColorHint="@color/hintColor"
             app:layout_constraintBottom_toBottomOf="@+id/textView2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView2"
@@ -125,6 +127,7 @@
             android:inputType="textPersonName"
             android:paddingLeft="7dp"
             android:paddingRight="7dp"
+            android:textColorHint="@color/hintColor"
             app:layout_constraintBottom_toBottomOf="@+id/textView3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView3"
