--- a/app/src/main/res/layout/dialog_notifier_snooze.xml
+++ b/app/src/main/res/layout/dialog_notifier_snooze.xml
@@ -24,7 +24,7 @@
                 android:layout_height="wrap_content"
                 android:padding="5dp"
                 android:text="@string/tripTitle"
-                android:textColor="@color/purple_500" />
+                android:textColor="@color/notificationTitle" />
 
             <TextView
                 android:id="@+id/txtDestination"
