Update Some Features

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,5 @@
     <color name="white">#E7EBF0</color>
     <color name="twitterBlue">#1DA1F2</color>
     <color name="red">#F44336</color>
+    <color name="hintColor">@android:color/darker_gray</color>
 </resources>
