--- a/app/src/main/res/layout/activity_trip.xml
+++ b/app/src/main/res/layout/activity_trip.xml
@@ -13,7 +13,7 @@
         android:paddingBottom="30dp">
 
         <TextView
-            android:id="@+id/userEmail"
+            android:id="@+id/appName"
             android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -34,7 +34,7 @@
             android:textColor="@color/teal_200"
             android:text="@string/LBL_START"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/userEmail" />
+            app:layout_constraintTop_toBottomOf="@+id/appName" />
 
         <TextView
             android:id="@+id/textView3"
@@ -87,10 +87,10 @@
             android:maxLength="150"
             android:paddingLeft="7dp"
             android:paddingRight="7dp"
-            app:layout_constraintBottom_toBottomOf="@+id/userEmail"
+            app:layout_constraintBottom_toBottomOf="@+id/appName"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/userEmail"
-            app:layout_constraintTop_toTopOf="@+id/userEmail" />
+            app:layout_constraintStart_toEndOf="@+id/appName"
+            app:layout_constraintTop_toTopOf="@+id/appName" />
 
         <EditText
             android:id="@+id/txtBackStartPoint"
@@ -161,7 +161,7 @@
             android:id="@+id/btnTripAdding"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="25dp"
             android:text="@string/Add"
             android:textAllCaps="false"
             android:textSize="17dp"
@@ -177,7 +177,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawableLeft="@drawable/ic_note_add"
-            android:text="AddNotes"
+            android:text="@string/addNote"
             android:textAllCaps="false"
             android:textSize="17dp"
             app:layout_constraintBottom_toBottomOf="@+id/textView4"
@@ -206,7 +206,7 @@
                 android:gravity="center"
                 android:inputType="number"
                 android:maxLength="3"
-                android:text="3"
+                android:text="1"
                 android:textColor="@color/purple_200"
                 android:visibility="invisible" />
 
@@ -225,26 +225,59 @@
             android:id="@+id/linearLayout2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:gravity="center"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout6">
 
-            <Button
-                android:id="@+id/dateBtn"
-                android:layout_width="75dp"
-                android:layout_height="75dp"
-                android:layout_margin="10dp"
-                android:background="@drawable/ic_date" />
+            <LinearLayout
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="vertical">
 
-            <Button
-                android:id="@+id/timerBtn"
-                android:layout_width="75dp"
-                android:layout_height="75dp"
-                android:layout_margin="10dp"
-                android:background="@drawable/ic_timer" />
+                <Button
+                    android:id="@+id/dateBtnRound"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/ic_date" />
+
+                <TextView
+                    android:id="@+id/lblDate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:gravity="center"
+                    android:text="@string/AddDate"
+                    android:textSize="12sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/timerBtnRound"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/ic_timer" />
+
+                <TextView
+                    android:id="@+id/lblTime"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:gravity="center"
+                    android:text="@string/AddTime"
+                    android:textSize="12sp" />
+            </LinearLayout>
+
         </LinearLayout>
 
         <Switch
@@ -253,7 +286,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginTop="45dp"
+            android:layout_marginTop="40dp"
             android:text="@string/LBL_REPEAT"
             android:textColor="@color/teal_200"
             app:layout_constraintStart_toStartOf="parent"
