--- a/app/src/main/res/layout/round_trip.xml
+++ b/app/src/main/res/layout/round_trip.xml
@@ -35,7 +35,7 @@
             android:gravity="center"
             android:inputType="number"
             android:maxLength="3"
-            android:text="3"
+            android:text="1"
             android:textColor="@color/purple_200"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="@+id/swtchRepeatingRound"
@@ -55,7 +55,7 @@
             app:layout_constraintTop_toTopOf="@+id/txtRepeatingNumberRound" />
 
         <TextView
-            android:id="@+id/userEmail"
+            android:id="@+id/appName"
             android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -76,7 +76,7 @@
             android:text="@string/LBL_START"
             android:textColor="@color/teal_200"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/userEmail" />
+            app:layout_constraintTop_toBottomOf="@+id/appName" />
 
         <TextView
             android:id="@+id/textView3"
@@ -117,10 +117,10 @@
             android:maxLength="150"
             android:paddingLeft="7dp"
             android:paddingRight="7dp"
-            app:layout_constraintBottom_toBottomOf="@+id/userEmail"
+            app:layout_constraintBottom_toBottomOf="@+id/appName"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/userEmail"
-            app:layout_constraintTop_toTopOf="@+id/userEmail" />
+            app:layout_constraintStart_toEndOf="@+id/appName"
+            app:layout_constraintTop_toTopOf="@+id/appName" />
 
         <EditText
             android:id="@+id/txtBackStartPoint"
@@ -211,21 +211,52 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtRepeatingNumberRound">
 
-            <Button
-                android:id="@+id/dateBtnRound"
-                android:layout_width="75dp"
-                android:layout_height="75dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginRight="10dp"
-                android:background="@drawable/ic_date" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical">
 
-            <Button
-                android:id="@+id/timerBtnRound"
-                android:layout_width="75dp"
-                android:layout_height="75dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginLeft="10dp"
-                android:background="@drawable/ic_timer" />
+                <Button
+                    android:id="@+id/dateBtnRound"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/ic_date" />
+
+                <TextView
+                    android:id="@+id/lblDateRound"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:gravity="center"
+                    android:text="@string/AddDate"
+                    android:textSize="12sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/timerBtnRound"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/ic_timer" />
+
+                <TextView
+                    android:id="@+id/lblTimeRound"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:gravity="center"
+                    android:text="@string/AddTime"
+                    android:textSize="12sp" />
+            </LinearLayout>
+
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
