--- a/app/src/main/res/layout/upcomingtrip_cardview.xml
+++ b/app/src/main/res/layout/upcomingtrip_cardview.xml
@@ -37,7 +37,8 @@
             android:paddingLeft="15dp"
             android:paddingTop="5dp"
             android:paddingRight="5dp"
-            android:paddingBottom="5dp">
+            android:paddingBottom="5dp"
+            android:layoutDirection="ltr">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -202,7 +203,8 @@
             android:orientation="horizontal"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
-            android:textAlignment="viewEnd">
+            android:textAlignment="viewEnd"
+            android:layoutDirection="ltr">
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/deleteIconBtn"
