--- a/app/src/main/res/layout/notes_dialog.xml
+++ b/app/src/main/res/layout/notes_dialog.xml
@@ -14,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginBottom="10dp"
+        android:textColor="@color/editText"
         app:layout_constraintBottom_toTopOf="@+id/txtNote"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,6 +28,7 @@
         android:layout_marginBottom="10dp"
         android:background="@drawable/custom_input"
         android:ems="10"
+        android:textColor="@color/editText"
         android:gravity="start|top"
         android:inputType="textMultiLine"
         android:maxLength="70"
