--- a/app/src/main/res/layout/round_trip.xml
+++ b/app/src/main/res/layout/round_trip.xml
@@ -49,6 +49,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginLeft="20dp"
             android:visibility="invisible"
+            android:textColor="@color/editText"
             app:layout_constraintBottom_toBottomOf="@+id/txtRepeatingNumberRound"
             app:layout_constraintEnd_toEndOf="@+id/txtBackEndPoint"
             app:layout_constraintStart_toEndOf="@+id/txtRepeatingNumberRound"
@@ -112,11 +113,13 @@
             android:layout_marginRight="16dp"
             android:background="@drawable/custom_input"
             android:ems="10"
+            android:textColor="@color/editText"
             android:hint="@string/HINT_TRIP_NAME"
             android:inputType="textPersonName"
             android:maxLength="150"
             android:paddingLeft="7dp"
             android:paddingRight="7dp"
+            android:textColorHint="@color/hintColor"
             app:layout_constraintBottom_toBottomOf="@+id/appName"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/appName"
@@ -133,10 +136,12 @@
             android:background="@drawable/custom_input"
             android:editable="false"
             android:ems="10"
+            android:textColor="@color/editText"
             android:hint="@string/HINT_START_POINT"
             android:inputType="textPersonName"
             android:paddingLeft="7dp"
             android:paddingRight="7dp"
+            android:textColorHint="@color/hintColor"
             app:layout_constraintBottom_toBottomOf="@+id/textView2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView2"
@@ -157,6 +162,8 @@
             android:inputType="textPersonName"
             android:paddingLeft="7dp"
             android:paddingRight="7dp"
+            android:textColor="@color/editText"
+            android:textColorHint="@color/hintColor"
             app:layout_constraintBottom_toBottomOf="@+id/textView3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView3"
