--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#5B7290</color>
+    <color name="purple_200">#660F57</color>
     <color name="purple_220">#E6DDF1</color>
-    <color name="purple_500">#663366</color>
-    <color name="purple_700">#660F57</color>
-    <color name="teal_200">#003366</color>
-    <color name="teal_700">#B1BDCD</color>
-    <color name="black">#B1BDCD</color>
+    <color name="purple_500">#5B7290</color>
+    <color name="purple_700">#663366</color>
+    <color name="teal_200">#5B7290</color>
+    <color name="teal_700">#003366</color>
+    <color name="black">#003366</color>
     <color name="white">#E7EBF0</color>
     <color name="twitterBlue">#1DA1F2</color>
     <color name="red">#F44336</color>
-    <color name="hintColor">#1d1d1d</color>
+    <color name="bubbleColor">#5B7290</color>
+    <color name="notificationTitle">#5B7290</color>
+    <color name="hintColor">#663366</color>
+    <color name="editText">@color/quantum_black_100</color>
 </resources>
