--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,6 +21,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginBottom="20dp"
+            android:textColor="@color/editText"
             android:background="@drawable/custom_input"
             android:drawableStart="@drawable/custom_email_icon"
             android:drawablePadding="7dp"
@@ -46,6 +47,7 @@
             android:layout_marginRight="16dp"
             android:layout_marginBottom="30dp"
             android:background="@drawable/custom_input"
+            android:textColor="@color/editText"
             android:drawableStart="@drawable/custom_lock_icon"
             android:drawablePadding="7dp"
             android:ems="10"
