--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="32dp"
-        android:src="@drawable/trip"
+        android:src="@drawable/logo"
         android:transitionName="logo_image"
         app:layout_constraintBottom_toTopOf="@+id/appName"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,11 +26,12 @@
         android:id="@+id/appName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:fontFamily="cursive"
         android:gravity="center_horizontal"
         android:text="@string/AppName"
         android:textAlignment="center"
         android:textColor="#fff"
-        android:textSize="60sp"
+        android:textSize="65sp"
         android:transitionName="logo_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
