--- a/app/src/main/res/layout/activity_trip.xml
+++ b/app/src/main/res/layout/activity_trip.xml
@@ -77,6 +77,7 @@
             android:layout_width="0dp"
             android:layout_height="45dp"
             android:layout_marginStart="10dp"
+            android:textColor="@color/editText"
             android:layout_marginLeft="10dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
@@ -101,6 +102,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
+            android:textColor="@color/editText"
             android:background="@drawable/custom_input"
             android:ems="10"
             android:hint="@string/HINT_START_POINT"
@@ -127,6 +129,7 @@
             android:inputType="textPersonName"
             android:paddingLeft="7dp"
             android:paddingRight="7dp"
+            android:textColor="@color/editText"
             android:textColorHint="@color/hintColor"
             app:layout_constraintBottom_toBottomOf="@+id/textView3"
             app:layout_constraintEnd_toEndOf="parent"
@@ -219,6 +222,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginStart="20dp"
+                android:textColor="@color/editText"
                 android:layout_marginLeft="20dp"
                 android:gravity="center"
                 android:visibility="invisible" />
@@ -252,6 +256,7 @@
                     android:id="@+id/lblDate"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/teal_200"
                     android:layout_margin="2dp"
                     android:gravity="center"
                     android:text="@string/AddDate"
@@ -276,6 +281,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="2dp"
+                    android:textColor="@color/teal_200"
                     android:gravity="center"
                     android:text="@string/AddTime"
                     android:textSize="12sp" />
@@ -288,6 +294,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+
             android:layout_marginLeft="16dp"
             android:layout_marginTop="40dp"
             android:text="@string/LBL_REPEAT"
