--- a/app/src/main/res/layout/notes_singlerow.xml
+++ b/app/src/main/res/layout/notes_singlerow.xml
@@ -10,6 +10,7 @@
         android:layout_width="334dp"
         android:layout_height="42dp"
         android:text="CheckBox"
+        android:layout_margin="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
