--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="bubbleColor">#003366</color>
     <color name="notificationTitle">#660F57</color>
     <color name="hintColor">@color/quantum_grey</color>
+    <color name="editText">@color/quantum_black_100</color>
 </resources>
