Update Some Features

--- a/app/src/main/res/layout/round_trip.xml
+++ b/app/src/main/res/layout/round_trip.xml
@@ -14,46 +14,6 @@
         android:layout_height="match_parent"
         android:background="@color/design_default_color_background">
 
-        <Switch
-            android:id="@+id/swtchRepeatingRound"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="50dp"
-            android:text="@string/LBL_REPEAT"
-            android:textColor="@color/teal_200"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView4" />
-
-        <EditText
-            android:id="@+id/txtRepeatingNumberRound"
-            android:layout_width="50dp"
-            android:layout_height="45dp"
-            android:background="@drawable/custom_input"
-            android:ems="10"
-            android:gravity="center"
-            android:inputType="number"
-            android:maxLength="3"
-            android:text="1"
-            android:textColor="@color/purple_200"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="@+id/swtchRepeatingRound"
-            app:layout_constraintStart_toStartOf="@+id/btnAddRoundNotes"
-            app:layout_constraintTop_toTopOf="@+id/swtchRepeatingRound" />
-
-        <Spinner
-            android:id="@+id/repeatingSpinnerRound"
-            android:layout_width="0dp"
-            android:layout_height="24dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginLeft="20dp"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="@+id/txtRepeatingNumberRound"
-            app:layout_constraintEnd_toEndOf="@+id/txtBackEndPoint"
-            app:layout_constraintStart_toEndOf="@+id/txtRepeatingNumberRound"
-            app:layout_constraintTop_toTopOf="@+id/txtRepeatingNumberRound" />
-
         <TextView
             android:id="@+id/appName"
             android:layout_width="70dp"
@@ -205,11 +165,11 @@
             android:id="@+id/linearLayout3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="30dp"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="@+id/txtBackEndPoint"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtRepeatingNumberRound">
+            app:layout_constraintTop_toBottomOf="@+id/btnAddRoundNotes">
 
             <LinearLayout
                 android:layout_width="match_parent"
