--- a/app/src/main/res/drawable/corner_view.xml
+++ b/app/src/main/res/drawable/corner_view.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/white"/>
+            <solid android:color="@color/teal_700"/>
             <corners android:radius="10dp"/>
             <stroke android:color="@color/colorPrimary" android:width="1dp"/>
         </shape>
