--- a/app/src/main/res/layout/notes_singlerow.xml
+++ b/app/src/main/res/layout/notes_singlerow.xml
@@ -7,9 +7,8 @@
 
     <CheckBox
         android:id="@+id/checkBox"
-        android:layout_width="334dp"
-        android:layout_height="42dp"
-        android:text="CheckBox"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_margin="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
