--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -13,5 +13,5 @@
     <color name="bubbleColor">#5B7290</color>
     <color name="notificationTitle">#5B7290</color>
     <color name="hintColor">#663366</color>
-    <color name="editText">@color/quantum_black_100</color>
+    <color name="editText">#111</color>
 </resources>
