--- a/app/src/main/res/layout/activity_add_notes_dialog.xml
+++ b/app/src/main/res/layout/activity_add_notes_dialog.xml
@@ -10,13 +10,12 @@
         android:id="@+id/addnoteTxt"
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:layout_marginTop="16dp"
-        android:ems="10"
-        android:hint="Add new note"
-        android:textColor="@color/editText"
-        android:inputType="textPersonName"
         android:layout_margin="30dp"
+        android:layout_marginTop="16dp"
         android:backgroundTint="@color/purple_200"
+        android:ems="10"
+        android:hint="@string/addnotehint"
+        android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
