--- a/app/src/main/res/layout/dialog_notifier.xml
+++ b/app/src/main/res/layout/dialog_notifier.xml
@@ -38,10 +38,10 @@
 
         <ImageView
             android:id="@+id/photo"
-            android:layout_width="81dp"
-            android:layout_height="47dp"
+            android:layout_width="54dp"
+            android:layout_height="55dp"
             android:layout_margin="5dp"
-            android:src="@drawable/trip" />
+            android:src="@drawable/logo" />
 
     </LinearLayout>
 
