--- a/app/src/main/res/layout/history_cell_row.xml
+++ b/app/src/main/res/layout/history_cell_row.xml
@@ -28,8 +28,8 @@
             android:layout_height="150dp"
             android:layout_marginBottom="5dp"
             android:contentDescription="@string/content_description_media"
-            android:scaleType="centerCrop"
-            app:srcCompat="@drawable/trip" />
+            android:scaleType="fitXY"
+            app:srcCompat="@drawable/defaultimage" />
 
         <LinearLayout
             android:layout_width="match_parent"
