--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -165,7 +165,7 @@
 
             <TextView
                 android:id="@+id/textView"
-                android:layout_width="96dp"
+                android:layout_width="wrap_content"
                 android:layout_height="24dp"
                 android:layout_marginEnd="3dp"
                 android:layout_marginRight="3dp"
