--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="32dp"
-        android:src="@drawable/logo"
+        android:src="@drawable/app_logo"
         android:transitionName="logo_image"
         app:layout_constraintBottom_toTopOf="@+id/appName"
         app:layout_constraintEnd_toEndOf="parent"
