--- a/app/src/main/res/layout/dialog_notifier.xml
+++ b/app/src/main/res/layout/dialog_notifier.xml
@@ -41,7 +41,7 @@
             android:layout_width="54dp"
             android:layout_height="55dp"
             android:layout_margin="5dp"
-            android:src="@drawable/logo" />
+            android:src="@drawable/app_logo" />
 
     </LinearLayout>
 
