--- a/app/src/main/res/layout/notes_dialog.xml
+++ b/app/src/main/res/layout/notes_dialog.xml
@@ -46,7 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:text="Add"
+        android:text="@string/Add"
         android:textAllCaps="false"
         android:textSize="17dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -58,7 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:text="Done"
+        android:text="@string/DONE"
         android:textAllCaps="false"
         android:textSize="17dp"
         app:layout_constraintBottom_toBottomOf="@+id/btnAddNote"
