--- a/app/src/main/res/layout/round_trip.xml
+++ b/app/src/main/res/layout/round_trip.xml
@@ -159,7 +159,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawableLeft="@drawable/ic_note_add"
-            android:text="Add Notes"
+            android:text="@string/addNote"
             android:textAllCaps="false"
             android:textSize="17dp"
             app:layout_constraintBottom_toBottomOf="@+id/textView4"
