--- a/app/src/main/res/layout/activity_trip_details.xml
+++ b/app/src/main/res/layout/activity_trip_details.xml
@@ -70,8 +70,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
-            android:text="TextView"
-            android:textColor="@color/purple_200"
+            android:textColor="@color/lblColor"
             app:layout_constraintBottom_toBottomOf="@+id/textView17"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView17"
@@ -85,8 +84,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
-            android:text="TextView"
-            android:textColor="@color/purple_200"
+            android:textColor="@color/lblColor"
             app:layout_constraintBottom_toBottomOf="@+id/appName"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -101,8 +99,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
-            android:text="TextView"
-            android:textColor="@color/purple_200"
+            android:textColor="@color/lblColor"
             app:layout_constraintBottom_toBottomOf="@+id/textView2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView2"
@@ -116,8 +113,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
-            android:text="TextView"
-            android:textColor="@color/purple_200"
+            android:textColor="@color/lblColor"
             app:layout_constraintBottom_toBottomOf="@+id/textView3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView3"
@@ -143,8 +139,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
-            android:text="TextView"
-            android:textColor="@color/purple_200"
+            android:textColor="@color/lblColor"
             app:layout_constraintBottom_toBottomOf="@+id/textView10"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView10"
@@ -182,8 +177,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
-            android:text="TextView"
-            android:textColor="@color/purple_200"
+            android:textColor="@color/lblColor"
             app:layout_constraintBottom_toBottomOf="@+id/textView18"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView18"
@@ -197,7 +191,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.529"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/trip" />
 
         <TextView
             android:id="@+id/textView17"
@@ -231,8 +226,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
-            android:text="TextView"
-            android:textColor="@color/purple_200"
+            android:textColor="@color/lblColor"
             app:layout_constraintBottom_toBottomOf="@+id/textView15"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView15"
@@ -246,8 +240,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
-            android:text="TextView"
-            android:textColor="@color/purple_200"
+            android:textColor="@color/lblColor"
             app:layout_constraintBottom_toBottomOf="@+id/textView12"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView12"
